Added Travis; Changed psr-0 autoload path;

--- a/composer.json
+++ b/composer.json
@@ -3,35 +3,37 @@
     "description": "Image Magick wrapper for PHP and ZF2",
     "type": "library",
     "keywords": [
-        "framework",
-        "zf2",
         "library",
         "PhMagick"
     ],
     "homepage": "https://github.com/renepardon/PhMagick",
-    "license": "GNU-GPL-3",
+    "license": "GPL-3.0",
     "authors": [
         {
             "name": "Nuno Costa",
             "email": "sven@francodacosta.com",
-            "homepage": "http://www.francodacosta.com"
+            "homepage": "http://www.francodacosta.com",
+            "role": "Developer"
         },
         {
             "name": "Christoph, René Pardon",
             "email": "christoph@renepardon.de",
-            "homepage": "http://www.renepardon.de"
+            "homepage": "http://www.renepardon.de",
+            "role": "Developer"
         }
     ],
     "require": {
         "php": ">=5.3.3"
     },
     "require-dev": {
-        "zendframework/zendframework": "2.2.*",
         "phpunit/PHPUnit": "3.7.*"
+    },
+    "suggest": {
+        "zendframework/zendframework": "What a nice framework ;)"
     },
     "autoload": {
         "psr-0": {
-            "PhMagick\\": "src/"
+            "PhMagick": "src/"
         }
     },
     "classmap": [
