License update Because of some restrictions within GPL-3.0 we changed the license back to LGPL-3.0

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "PhLuzia"
     ],
     "homepage": "https://github.com/renepardon/PhLuzia",
-    "license": "GPL-3.0",
+    "license": "LGPL-3.0",
     "authors": [
         {
             "name": "Christoph, René Pardon",
